--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server/index.js",
     "build": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "react-dev": "webpack -d --watch",
+    "react-dev": "webpack -w",
     "server-dev": "nodemon server/index.js"
   },
   "repository": {
