--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^8.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "webpack-cli": "^4.1.0"
