--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "babel-loader": "^8.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "leaflet": "^1.7.1",
     "mongoose": "^5.10.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.0.0",
     "styled-components": "^5.2.1",
     "webpack-cli": "^4.1.0"
   },
