--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.0.0",
+    "react-modal": "^3.11.2",
     "styled-components": "^5.2.1",
     "webpack-cli": "^4.1.0"
   },
